cluster/apps/networking/traefik/dashboard/ingress.yaml
  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    hajimari.io/enable: "true"
    hajimari.io/icon: "web"
    hajimari.io/appName: "traefik"
spec:
  tls:
    - hosts:
        - "traefik.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-tls"
  rules:
    - host: "traefik.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
  values:
    ingress:
      enabled: true
      ingressClassName: "traefik"
      host: "traefik.${SECRET_DOMAIN}"
      tlsSecret: "${SECRET_DOMAIN/./-}-tls"
      tls: true
      annotations:
        kubernetes.io/ingress.class: traefik
        traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
        kubernetes.io/tls-acme: "true"
        cert-manager.io/cluster-issuer: letsencrypt-prod
